--- a/css/styles.css
+++ b/css/styles.css
@@ -76,20 +76,22 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 /* Navigation/Header*/
 nav {
-    min-height: 80px;
-    background-color: #252831;
-    text-align: center;
+  display: flex;
+  width: 100%;
+  height: 80px;
+  background-color: #1a1a1a;
+  text-align:center;
 }
 nav h1 {
-	    margin: auto;
-	}
+  margin: auto;
+}
 nav h1 a {
-	    color: #fff;
-	    font-size: 14pt;
-	    font-weight: 200;
-	    letter-spacing: 10px;
-	    text-transform: uppercase;
-	}
+  color: #fff;
+  font-size: calc(0.45em + 2vmin);
+  font-weight: 200;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
