--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* CSS Document */
+/* CSS Documentation */
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
@@ -8,7 +8,7 @@ body,td,th,p{
 	line-height: 1.5;
 }
 body {
-	background-color: #ffe6f2;
+	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
@@ -18,11 +18,11 @@ ul, li {
 	color: #333;
 }
 a {
-	color: #3385ff;
+	color: #fff;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: #3385ff;
+	color: #3397db;
 	text-decoration: none;
 }
 a img{
@@ -37,13 +37,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 /* Main */
 #maincontent {
-  background-color: #f2f2f2;
+  background-color: #f3f3f3;
   min-height: 100%;
 }
-
 /* Footer */
 #footer {
-  background-color: #8080ff;
+  background-color: #444;
   color: #aaa;
   font-size: 0.8em;
   letter-spacing: 1px;
@@ -56,7 +55,7 @@ nav {
   display: flex;
   width: 100%;
   height: 80px;
-  background-color: #1a1a1a;
+  background-color: darkred;
   text-align:center;
 }
 nav h1 {
@@ -92,7 +91,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #ff0000;
+    color: darkred;
     text-decoration: none;
 }
 
@@ -114,7 +113,7 @@ nav h1 a {
   align-items: center;
   width: 100%;
   height: auto;
-  background-color: #404040;
+  background-color: #252831;
 }
 .filter-options h2 {
   color: white;
@@ -135,7 +134,7 @@ nav h1 a {
   width: 200px;
 }
 
-/* Main/Restaurants*/
+/* Restaurant Listing */
 #restaurants-list {
   display: flex;
   flex-wrap: wrap;
@@ -198,7 +197,7 @@ nav h1 a {
   text-transform: uppercase;
 }
 
-/* Main Restaurant details*/
+/* Restaurant Details */
 .inside {
   display: flex;
   flex-direction: row;
@@ -214,7 +213,7 @@ nav h1 a {
   height: 270px;
 }
 .inside #map {
-  background-color: #ff0000;
+  background-color: #ccc;
   height: 100%;
   width: 100%;
 }
@@ -306,7 +305,7 @@ nav h1 a {
   width: 100%;
 }
 
-/* Viewports */
+/* Viewports*/
 
 @media (min-width: 458px) {
   .filter-options {
@@ -329,7 +328,7 @@ nav h1 a {
   }
   #restaurants-list p {
     width: 66%;
-  }
+  }  
   #restaurants-list li h1 {
     height: 41px;
   }
